--- a/dev/index.html
+++ b/dev/index.html
@@ -10,46 +10,38 @@
   </head>
   <body>
   
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li>Item</li>
-          <li>Item</li>
-          <li>Item</li>
-        </ul>
-      </div>
-    </div>
+
+  <nav class="top-bar" data-topbar role="navigation">
+    <div class="menu-centered">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li><a href="#">Item 1</a></li>
+        <li><a href="#">Item 2</a></li>
+        <li><a href="#">Item 3</a></li>
+      </ul>
+    </div>  
+  </nav>
 
 
     <div class="row">
       <div class="large-12 columns">
-        <h1>Welcome to Foundation</h1>
+        <h1>Check Out These Wienerdogs!</h1>
       </div>
     </div>
 
     <div class="row">
       <div class="large-12 columns">
-        <div class="callout">
-          <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-          <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-          <p>Once you've exhausted the fun in this document, you should check out:</p>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-            </div>
+        <h3>We are stoked you want to touch these Wieners! </h3>
+        <p>8======D~~~~</p>
+        <p>Once you've exhausted the fun in this document, you should check out:</p>
+        <div class="row">
+          <div class="large-4 medium-4 columns">
+            <p>Fuck</p>
           </div>
-          <div class="row">
-            <div class="large-4 medium-4 medium-push-2 columns">
-              <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-            </div>
-            <div class="large-4 medium-4 medium-pull-2 columns">
-              <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-            </div>
+          <div class="large-4 medium-4 columns">
+            <p>Fuck Again</p>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <p>Say it with me</p>
           </div>
         </div>
       </div>
@@ -57,7 +49,7 @@
 
     <div class="row">
       <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
+        <h5>Grids Bro</h5>
         <!-- Grid Example -->
 
         <div class="row">
@@ -99,7 +91,7 @@
 
         <hr />
 
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
+        <h5>Fill out this shit </h5>
         <form>
           <div class="row">
             <div class="large-12 columns">
@@ -130,10 +122,10 @@
             <div class="large-12 columns">
               <label>Select Box</label>
               <select>
-                <option value="husker">Husker</option>
-                <option value="starbuck">Starbuck</option>
-                <option value="hotdog">Hot Dog</option>
-                <option value="apollo">Apollo</option>
+                <option value="husker">Wienerdog</option>
+                <option value="starbuck">Wienerdog</option>
+                <option value="hotdog">Wienerdog</option>
+                <option value="apollo">Wienerdog</option>
               </select>
             </div>
           </div>
@@ -159,16 +151,11 @@
       </div>
 
       <div class="large-4 medium-4 columns">
-        <h5>Try one of these buttons:</h5>
+        <h5>Fuck wit these buttons du</h5>
         <p><a href="#" class="button">Simple Button</a><br/>
         <a href="#" class="success button">Success Btn</a><br/>
         <a href="#" class="alert button">Alert Btn</a><br/>
         <a href="#" class="secondary button">Secondary Btn</a></p>
-        <div class="callout">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
-        </div>
       </div>
     </div>
 
