--- a/dev/index.html
+++ b/dev/index.html
@@ -23,7 +23,15 @@
 
 
     <div class="row">
-      <div class="large-12 columns">
+      <div class="large-12">
+        <div class="callout">
+          <img src="http://placehold.it/1000x300" alt="">
+        </div>     
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="large-12 columns text-center"">
         <h1>Check Out These Wienerdogs!</h1>
       </div>
     </div>
